--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grunt-strap boilerplate",
+  "name": "grunt-strap-boilerplate",
   "version": "1.0.0",
   "dependencies": {
     "grunt-contrib-concat": "latest",
