--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "grunt-contrib-less": "latest",
     "grunt-contrib-cssmin": "latest",
     "grunt-contrib-watch": "latest"
+  },
+  "devDependencies": {
+    "grunt-uncss": "^0.3.6"
   }
 }
